objects/Test450Fields__c.object
<CustomObject>
    <fields>
        <fullName>F100__c</fullName>
        <label>F100</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F101__c</fullName>
        <label>F101</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F102__c</fullName>
        <label>F102</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Test450Field</label>
    <nameField>
        <label>Test450Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test450Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>